Updated Scrollbar & small fixes

--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,26 @@ section ul li:hover {
   border-radius: 8px;
 }
 
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: #2a2634;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(45deg, #6CCA2B 0%, #1883B7 100%);
+  border-radius: 20px;
+  border: 3px solid #2a2634;
+}
+
 /*animation*/
+
+button {
+  animation: fromRight 0.7s 0.2s backwards;
+  animation-delay: 0.4s;
+}
 
 header div {
   animation: fromTop 0.7s 0.2s backwards;
@@ -170,6 +189,18 @@ main section:nth-child(3) {
   from {
     opacity: 0;
     transform: translateX(-30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fromRight {
+  from {
+    opacity: 0;
+    transform: translateX(30px);
   }
 
   to {
